# mcp-pycon

./: .env.example  .gitignore  CHALLENGE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: README.md  devcontainer.json  post-create.sh  post-start.sh
demo_client/: .dockerignore  Dockerfile  __init__.py  azure_chat_wrapper.py  langgraph_agent.py  streamlit_app.py
demo_client/.streamlit/: config.toml
mcp_server/: Dockerfile  README.md  __init__.py  server.py
task_api/: .dockerignore  Dockerfile  README.md  __init__.py  config.py  docker-compose.yml  main.py  models.py  storage.py  test_api.sh
