[project]
name = "mcp-pycon-demo"
version = "0.1.0"
description = "PyCon demo showcasing MCP as a bridge between LLMs and real-world APIs"
authors = [{name = "Andres Rios"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "fastmcp>=2.0.0",
    "azure-ai-inference>=1.0.0b9",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_api", "mcp_server", "demo_client"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
