[project]
name = "mcp-pycon-demo"
version = "0.1.0"
description = "PyCon demo showcasing MCP as a bridge between LLMs and real-world APIs"
authors = [{name = "Andres Rios"}]
requires-python = ">=3.12"
dependencies = [
    # Core dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "email-validator>=2.1.0",
    # MCP and AI
    "fastmcp>=2.0.0",
    "mcp>=1.20.0",
    "azure-ai-inference>=1.0.0b9",
    "langgraph>=1.0.2",
    "langchain-core>=1.0.0",
    # CLI and UI
    "rich>=13.7.0",
    "typer>=0.9.0",
    "streamlit>=1.31.0",
    "pandas>=2.3.3",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_api", "mcp_server", "demo_client"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
